Rectified image stretching issue, camlens on single line, cosmetic changes

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body {
   border-radius: 50%;
   border: 15px solid rgba(182,178,133,1);
   border-top-color: transparent;
-  animation: spin 1.5s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
@@ -1176,8 +1176,8 @@ body {
   background-size: cover;
   opacity: 1;
   position: absolute;
-  top: 315px;
-  left: 1260px;
+  top: 40px;
+  right: 40px;
   overflow: hidden;
 }
 .v6_12 {
@@ -1252,7 +1252,7 @@ body {
   width: 341px;
   color: rgba(182,178,133,1);
   position: absolute;
-  top: 278px;
+  top: 150px;
   left: 111px;
   font-family: Raleway;
   font-weight: 900;
@@ -1277,8 +1277,8 @@ body {
   width: 395px;
   color: rgba(182,178,133,1);
   position: absolute;
-  top: 419px;
-  left: 107px;
+  top: 150px;
+  left: 435px;
   font-family: Raleway;
   font-weight: 900;
   font-size: 150px;
@@ -1289,20 +1289,20 @@ body {
   width: 377px;
   color: rgba(255,250,250,0.7799999713897705);
   position: absolute;
-  top: 583px;
+  top: 305px;
   left: 115px;
   font-family: Raleway;
   font-weight: 900;
   font-size: 36px;
   opacity: 1;
   text-align: left;
-  letter-spacing: 9.5px;
+  letter-spacing: 42.5px;
 }
 .v6_96 {
   width: 377px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 649px;
+  top: 370px;
   left: 115px;
   font-family: Raleway;
   font-weight: 400;
@@ -1340,8 +1340,8 @@ body {
   width: 107px;
   color: rgba(204,202,202,1);
   position: absolute;
-  top: 351px;
-  left: 1290px;
+  top: 75px;
+  right: 70px;
   font-family: Poppins;
   font-weight: 900;
   font-size: 32px;
@@ -1471,12 +1471,12 @@ body {
   min-height: 1024px !important;
 }
 .v6_5 {
-  height: 740px !important;
+  height: 670px !important;
 }
 .v6_7 img{
-  width: 1200px !important;
-  height: 1000px !important;
-  clip-path: inset(0px 0px 0px 550px); 
+  width: 1000px !important;
+  height: 800px !important;
+  clip-path: inset(0px 0px 0px 450px); 
   filter: saturate(0);
   background-repeat: no-repeat;
   background-position: center center;
@@ -1484,7 +1484,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 0px;
-  left: -605px;
+  left: -505px;
 }
 .v6_7 {
   width: 110% !important;
@@ -1492,35 +1492,36 @@ body {
 }
  .v6_92 {
     width: 141px;
-    top: 60px;
+    top: 110px;
     left: 50px;
-    font-size: 80px;
+    font-size:65px;
  }
  .v6_94 {
     width: 141px;
-    top: 140px;
-    left: 50px;
-    font-size: 80px;
+    top: 110px;
+    left: 190px;
+    font-size: 65px;
 }
 .v6_95 {
   width: 150px;
-  top: 230px;
+  top: 180px;
   left: 52px;
   font-size: 20px;
-  letter-spacing: 6.5px;
+  letter-spacing: 15px;
 }
 .v6_96 {
   width: 200px;
-  top: 270px;
+  top: 210px;
   left: 50px;
   font-size: 12px;
 }
 .v6_8 {
   width: 200px;
-  top: 200px;
-  left: 50px;
+  top: 140px;
+  left: unset;
+  right: 100px;
   font-weight: 900;
-  font-size: 400px;
+  font-size: 350px;
   opacity: 0.2;
   letter-spacing: -30px;
   -webkit-text-stroke-width: 2px;
@@ -1528,9 +1529,9 @@ body {
 .v30_70 {
   width: 70px;
   height: 70px;
-  top: 50px;
+  top: 30px;
   left: unset;
-  right: 20px;
+  right: 10px;
   overflow: hidden;
 }
 .v6_12 {
@@ -1545,9 +1546,9 @@ body {
 }
 .v6_101 {
   width: 70px;
-  top: 68px;
+  top: 48px;
   left: unset;
-  right: 20px;
+  right: 10px;
   font-size: 12px;
 }
 .v6_103 {
@@ -1555,7 +1556,7 @@ body {
   height: 40px;
   opacity: 0.8;
   position: absolute;
-  top: 425px;
+  top: 375px;
   left: unset;
   right: 20px;
 }
@@ -1569,7 +1570,7 @@ body {
   width: 40px;
   height: 40px;
   opacity: 0.8;
-  top: 475px;
+  top: 425px;
   left: unset;
   right: 20px;
 }
@@ -1582,31 +1583,31 @@ body {
 .v6_9 {
   width: 180px !important;
   height: 90px; !important;
-  top: 580px;
+  top: 500px;
   left: 100px;
 }
 .v6_10 {
   width: 180px !important;
   height: 90px; !important;
-  top: 580px;
+  top: 500px;
   left: 300px;
 }
 .v6_97 {
   width: 15px !important;
   height: 15px !important;
-  top: 700px;
+  top: 620px;
   left: 50px;
 }
 .v6_98 {
   width: 20px;
   height: 20px;
-  top: 700px;
+  top: 620px;
   left: 80px;
 }
 .v6_100 {
   width: 20px;
   height: 20px;
-  top: 700px;
+  top: 620px;
   left: 110px;
 }
 .dot {
@@ -1671,7 +1672,7 @@ body {
 /*ABOUT*/
 .v30_2 {
   height: 740px !important;
-  top: 740px;
+  top: 670px;
 }
 .v30_28 {
   width: 25px;
@@ -1745,7 +1746,7 @@ body {
 .v30_29 {
   width: 100%;
   height: 2342px !important;
-  top: 1480px;
+  top: 1410px;
 }
 .v30_39 {
   width: 25px;
@@ -1933,7 +1934,7 @@ body {
 .v30_71 {
   width: 100%;
   height: 666px !important;
-  top: 3822px;
+  top: 3752px;
 }
 .v30_81 {
   width: 25px;
@@ -1999,7 +2000,7 @@ body {
 /*FOOTER*/
 .v30_94 {
   height: 592px !important;
-  top: 4488px;
+  top: 4418px;
 }
 .v41_4 {
   width: 25px;
@@ -2092,7 +2093,7 @@ body {
   font-size: 7px;
 }
 .v30_116 {
-  height: 5080px !important;
+  height: 5010px !important;
 }
 
 
